--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "typescript": ">=4.5.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.3"
+    "@openzeppelin/contracts": "^4.9.3",
+    "@uniswap/swap-router-contracts": "^1.3.0",
+    "@uniswap/v3-periphery": "^1.4.3"
   }
 }
